# int3rceptor

./: .env.example  .gitignore  .gitmodules  APP_ROADMAP.md  Cargo.toml  DESKTOP_APP_PLAN.md  Dockerfile.api  INTRUDER_IMPLEMENTATION.md  Makefile  NEXT_SESSION_PLAN.md  PHASE6_COMPLETE.md  PHASE6_HTTP2_COMPLETE.md  PHASE6_HTTP2_PLAN.md  PHASE6_PLUGIN_STATUS.md  PHASE6_PLUGIN_SYSTEM_PLAN.md  PHASE6_SUMMARY.md  PLUGIN_INTEGRATION_TRACKER.md  PRICING.md  PRODUCTION_PERFECT_STATUS.md  README.md  RELEASE_NOTES_v2.0.md  SECURITY_FEATURES.md  SECURITY_IMPLEMENTATION.md  SESSION_COMPLETE.md  TODAY_SUMMARY.md  index.html  package-lock.json  package.json  styles.css  vitest.config.ts
api/: Cargo.toml
api/src/: auth.rs  csrf.rs  error.rs  lib.rs  main.rs  models.rs  routes.rs  security_routes.rs  state.rs  tls.rs  websocket.rs
cli/: Cargo.toml  build.rs
cli/src/: main.rs
core/: Cargo.toml
core/src/: capture.rs  connection_pool.rs  crypto.rs  error.rs  intruder.rs  lib.rs  license.rs  metrics.rs  project.rs  proxy.rs  rules.rs  scope.rs  security.rs  storage.rs  tls.rs  websocket.rs
core/src/comparer/: mod.rs
core/src/encoding/: mod.rs
core/src/integration/: mod.rs  nowaru_bridge.rs  voidwalker_bridge.rs
core/src/plugin/: config.rs  hooks.rs  host_functions.rs  manager.rs  mod.rs  runtime.rs  security.rs
core/src/scanner/: free_rules.json  mod.rs  rules.rs
int3rceptor/: .gitmodules  Cargo.toml  Dockerfile  README.md
int3rceptor/.github/: pull_request_template.md
int3rceptor/.github/ISSUE_TEMPLATE/: bug_report.md
int3rceptor/.github/workflows/: ci-pro.yml  ci.yml  sentry-ui-release.yml
int3rceptor/api/src/: audit.rs  auth.rs  csrf.rs  ip_filter.rs  models.rs  routes.rs  security_routes.rs  session.rs  state.rs  tls.rs
int3rceptor/cli/: Cargo.toml
int3rceptor/core/: Cargo.toml
int3rceptor/core/src/: capture.rs  cert_manager.rs  crypto.rs  database.rs  error.rs  lib.rs  license.rs  metrics.rs  project.rs  proxy.rs  security.rs  tls.rs  websocket.rs
int3rceptor/core/src/encoding/: mod.rs
int3rceptor/core/src/integration/: nowaru_bridge.rs
int3rceptor/core/src/plugin/: host_functions.rs  manager.rs  mod.rs
int3rceptor/core/src/scanner/: detection.rs  free_rules.json  rules.rs  types.rs
int3rceptor/core/src/telemetry/: sentry.rs
int3rceptor/desktop/: .pa11yci.json  TAURI_SETUP_PROGRESS.md  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  visual-regression.config.json
int3rceptor/desktop/scripts/: generate-report.js  run-all-tests.sh  run-performance-tests.js  run-performance-tests.sh  run-visual-tests.sh
int3rceptor/desktop/src/: App.vue  main.ts  style.css
int3rceptor/desktop/src-tauri/: tauri.conf.json
int3rceptor/desktop/src/api/: client.ts
int3rceptor/desktop/src/composables/: useDashboardActivity.ts  useStats.ts
int3rceptor/desktop/src/stores/: plugins.ts  stats.ts
int3rceptor/desktop/src/styles/: STYLE_GUIDE.md  VERIFICATION_CHECKLIST.md  tokens.css
int3rceptor/desktop/src/utils/: badgeHelpers.ts
int3rceptor/desktop/test-results/: consolidated-report.html  findings.json
int3rceptor/desktop/tests/: README.md  visual-regression-test.js
int3rceptor/desktop/tests/accessibility/: README.md  comparer.test.ts  dashboard.test.ts  decoder.test.ts  intruder.test.ts  plugins.test.ts  rest.test.ts  scanner.test.ts  settings.test.ts  traffic.test.ts  utils.ts  websocket.test.ts
int3rceptor/desktop/tests/cross-browser/: README.md  dashboard.test.ts  decoder.test.ts  intruder.test.ts  plugins.test.ts  rest.test.ts  scanner.test.ts  settings.test.ts  traffic.test.ts  utils.ts
int3rceptor/desktop/tests/performance/: README.md  comparer.test.ts  dashboard.test.ts  decoder.test.ts  intruder.test.ts  performance.config.json  plugins.test.ts  repeater.test.ts  scanner.test.ts  settings.test.ts  traffic.test.ts  utils.ts  websocket.test.ts
int3rceptor/desktop/tests/visual/: README.md  comparer.test.ts  dashboard.test.ts  decoder.test.ts  intruder.test.ts  loading.test.ts  mockups.json  plugins.test.ts  repeater.test.ts  scanner.test.ts  settings.test.ts  traffic.test.ts  utils.ts  websocket.test.ts
int3rceptor/docs/: Q1_2026_SECURITY_SPRINT_SUMMARY.md  SECURITY_ANALYSIS_Q1_2026.md
int3rceptor/docs/observability/: sentry-core.md  sentry.md
int3rceptor/docs/structure-fullECO/: NEXT STEPS - Phase 4 Task 2 Onwards.md
int3rceptor/ui/: package-lock.json  package.json
int3rceptor/ui/src/components/: DashboardTab.vue  ScopeTab.vue  TrafficTab.vue
int3rceptor/ui/src/types/: index.ts  (+1 more)
int3rceptor/website/: script.js
int3rceptor/website/download/: index.html
int3rceptor/website/privacy/: index.html
interceptor/: .gitignore  CONTACT_CHANNELS_UPDATE.md  CONTACT_UPDATE_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION.md  FINAL_REPORT.md  FINAL_STATUS.md  GITHUB_SETUP.md  IMPLEMENTATION_SUMMARY.md  LICENSE_COMMERCIAL.md  LICENSE_PROTECTION_SUMMARY.md  README.md  RELEASE_NOTES_v2.0.md  TASKS.md  docker-compose.yml  prompt.txt
interceptor/.github/ISSUE_TEMPLATE/: feature_request.md
interceptor/.github/workflows/: ci.yml
interceptor/api/: Cargo.toml
interceptor/api/src/: auth.rs  lib.rs  main.rs  routes.rs  state.rs
interceptor/cli/: Cargo.toml
interceptor/cli/src/: main.rs
interceptor/core/: Cargo.toml  build.rs
interceptor/core/src/: capture.rs  cert_manager.rs  connection_pool.rs  error.rs  intruder.rs  lib.rs  proxy.rs  rules.rs  scope.rs  storage.rs  websocket.rs
interceptor/core/tests/: https_example.rs
interceptor/docs/: IMAGE_GENERATION_PROMPTS.md  PENDING_MOCKUPS.md  SECURITY_MECHANISMS.md  WATERMARKING.md
interceptor/docs/api-docs/: README.md  openapi.yaml
interceptor/docs/user-guide/: 01-getting-started.md  02-quick-start.md  03-core-features.md  04-advanced-features.md  05-troubleshooting.md  README.md
interceptor/docs/video-tutorials/: README.md
interceptor/tools/license-gen/: Cargo.toml
interceptor/ui/: package-lock.json  package.json  tsconfig.json
interceptor/website/: package-lock.json
plugins/example-logger/: Cargo.toml
plugins/example-logger/src/: lib.rs
(+131 files in other folders)
