[package]
name = "interceptor-api"
version = "2.0.0"
edition = "2021"

[features]
# Optional feature for generating self-signed certificates in development
dev-certs = ["rcgen"]

[dependencies]
interceptor-core = { path = "../core" }
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
anyhow.workspace = true
futures.workspace = true
tracing-subscriber.workspace = true
hyper.workspace = true
http-body-util.workspace = true
time.workspace = true
bytes.workspace = true
base64.workspace = true
once_cell = "1.19"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Security features
rand = "0.8"
sha2 = "0.10"
uuid = { version = "1.6", features = ["v4"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }

# Optional dependencies for dev-certs feature
rcgen = { version = "0.12", optional = true }

[dev-dependencies]
tempfile = "3.8"
