[workspace]
members = ["core", "api", "cli"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
hyper = { version = "1.0", features = ["full"] }
http = "1.0"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2", "server", "server-auto"] }
hyper-rustls = { version = "0.26", features = ["http1", "http2", "ring", "webpki-roots"] }
rustls = "0.22"
tokio-rustls = "0.25"
rcgen = { version = "0.12", features = ["x509-parser", "pem"] }
axum = { version = "0.7", features = ["macros", "ws"] }
tower = { version = "0.4", features = ["limit", "timeout"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace", "limit"] }
tokio-tungstenite = "0.21"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
bytes = "1.5"
parking_lot = "0.12"
dashmap = "5.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap = { version = "4.4", features = ["derive"] }
time = { version = "0.3", features = ["macros"] }
base64 = "0.22"
rusqlite = { version = "0.29", features = ["bundled"] }
