[package]
name = "interceptor-core"
version = "2.0.0"
edition = "2021"

[dependencies]
tokio.workspace = true
hyper.workspace = true
http.workspace = true
http-body-util.workspace = true
hyper-util.workspace = true
hyper-rustls.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true
rcgen.workspace = true
anyhow.workspace = true
thiserror.workspace = true
bytes.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
tracing.workspace = true
time.workspace = true
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
regex = "1.10"
obfstr = "0.4"
once_cell = "1.19"
sentry = { version = "0.46.0", default-features = false, features = ["backtrace", "panic", "transport", "anyhow"] }
sentry-tracing = "0.46.0"
# Security improvements for Q1 2026
ed25519-dalek = { version = "2.1", features = ["std"] }
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"
argon2 = "0.5"
# Scanner dependencies
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4"] }
urlencoding = "2.1"
# Plugin system (WASM)
# Updated to 36.0.6+ to fix multiple security vulnerabilities
# - RUSTSEC-2024-0438: Windows device filename sandboxing
# - RUSTSEC-2025-0046: fd_renumber panic
# - RUSTSEC-2025-0118: Unsound shared memory access
# - CVE-2025-XXXX: f64.copysign segfault on x86-64
# - CVE-2025-XXXX: Unsound API access to shared linear memory
# - GHSA: wasi:http/types.fields panic on excessive fields
# - GHSA: WASI guest-controlled resource exhaustion DoS
wasmtime = "36.0.6"
wasmtime-wasi = "36.0.6"
hex = "0.4.3"
html-escape = "0.2.13"
similar = "2.7.0"

[features]
default = []
pro = []

# [target.'cfg(feature = "pro")'.dependencies]
# core-pro = { path = "../core-pro", package = "int3rceptor-pro" }

[dev-dependencies]
tempfile = "3.10"
