[package]
name = "interceptor-api"
version = "0.1.0"
edition = "2021"

[dependencies]
interceptor-core = { path = "../core" }
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
anyhow.workspace = true
futures.workspace = true
tracing-subscriber.workspace = true
hyper.workspace = true
http-body-util.workspace = true
time.workspace = true
bytes.workspace = true
base64.workspace = true
