[package]
name = "interceptor-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
hyper.workspace = true
http.workspace = true
http-body-util.workspace = true
hyper-util.workspace = true
hyper-rustls.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true
rcgen.workspace = true
anyhow.workspace = true
thiserror.workspace = true
bytes.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
tracing.workspace = true
time.workspace = true
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
regex = "1.10"
